--- a/buoi3/buoi3.html
+++ b/buoi3/buoi3.html
@@ -7,13 +7,21 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="content">
 	<ul class="menu">
 		<li>Home</li>
-		<li>Sản phẩm</li>
+		<li>Sản phẩm
+			<ul class="menucon">
+				<li> Sản phẩm 1</li>
+				<li> Sản phẩm 2</li>
+				<li> Sản phẩm 3</li>
+			</ul>
+		</li>
 		<li>Giới thiệu</li>
 		<li>Liên hệ</li>
 		<li>Giới thiệu</li>
 		<li>Liên hệ</li>
 	</ul>
+</div>
 </body>
 </html>
