--- a/buoi3/buoi3.html
+++ b/buoi3/buoi3.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="content">
+<!-- <div id="content">
 	<ul class="menu">
 		<li>Home</li>
 		<li>Sản phẩm
@@ -23,5 +23,30 @@
 		<li>Liên hệ</li>
 	</ul>
 </div>
+
+<br><br><br><br><br><br><br><br><br><br> -->
+
+<div class="flag">
+	
+	<div class="hinh1">
+		<img src="images/1.png" alt="" width="200px">
+	</div>
+	<div class="hinh2">
+		<img src="images/2.png" alt="" width="200px">
+	</div>
+	<div class="hinh3">
+		<img src="images/3.gif" alt="" width="200px">
+	</div>
+	<div class="hinh4">
+		<img src="images/4.jpg" alt="" width="200px">
+	</div>
+</div>
+
+<br><br><br><br><br><br><br><br><br><br>
+
+<br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
